# gosling

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  LICENSE.md  Makefile  README.md  coverage-offline.html  coverage.html  design-doc.xhtml  gosling-spec.xhtml  gosling.spdx.json  honk-rpc-spec.xhtml  index.xhtml  news.xhtml  presentations.xhtml  security-reviews.xhtml  style.css  usage-guide.xhtml
cgosling/: annotated.html  cgosling_8h.html  cgosling_8h__dep__incl.map  cgosling_8h__dep__incl.md5  cgosling_8h__incl.map  cgosling_8h_source.html  cgosling_8hpp.html  cgosling_8hpp__incl.map  cgosling_8hpp__incl.md5  cgosling_8hpp_source.html  classes.html  classgosling_1_1out__unique__ptr.html  classstd_1_1default__delete_3_01gosling__error_01_4.html  classstd_1_1default__delete_3_01gosling__library_01_4.html  classstd_1_1default__delete_3_01gosling__pluggable__transport__config_01_4.html  classstd_1_1default__delete_3_01gosling__proxy__config_01_4.html  classstd_1_1default__delete_3_01gosling__target__address_01_4.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  (+8 more)
source/: CMakeLists.txt
source/bindings/: CMakeLists.txt
source/bindings/c/: CMakeLists.txt  Cargo.toml  build_c_bindings.rs  build_c_shared_bindings.rs  cgosling.c.handlebars  cgosling.h.handlebars
source/bindings/cpp/: CMakeLists.txt  Cargo.toml  Doxyfile.in  build_cpp_bindings.rs  cgosling.hpp.handlebars  libgosling.hpp.handlebars
source/bindings/cpp/test/: CMakeLists.txt  precomp.hpp  tor_provider.cpp
source/bindings/java/: CMakeLists.txt  Cargo.toml  Gosling.java.handlebars  GoslingJNI.cpp.handlebars  build_java_bindings.rs
source/bindings/java/test/: CMakeLists.txt  GoslingHandshake.java  GoslingTest.java
source/bindings/python/: CMakeLists.txt  Cargo.toml  build_python_bindings.rs  cgosling.py.handlebars
source/examples/: CMakeLists.txt  README.md
source/examples/cpp/: CMakeLists.txt  README.md  callbacks.hpp  commands.cpp  commands.hpp  endpoint_client_callbacks.cpp  endpoint_server_callbacks.cpp  globals.hpp  hello_world.hpp  identity_client_callbacks.cpp  identity_server_callbacks.cpp  main.cpp  precomp.hpp  terminal.cpp  terminal.hpp
source/examples/java/: Example.java  README.md
source/examples/python/: example.py
source/examples/rust/: CMakeLists.txt  Cargo.toml  README.md
source/examples/rust/src/: commands.rs  globals.rs  main.rs  terminal.rs
source/gosling/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml  libgosling.hpp
source/gosling/crates/: CMakeLists.txt
source/gosling/crates/cgosling/: CMakeLists.txt  Cargo.toml  Cargo.toml.in  build.rs  cbindgen.toml
source/gosling/crates/cgosling-proc-macros/: Cargo.toml
source/gosling/crates/cgosling-proc-macros/src/: lib.rs
source/gosling/crates/cgosling/fuzz/: Cargo.toml
source/gosling/crates/cgosling/fuzz/fuzz_targets/: fuzz_cgosling.rs
source/gosling/crates/cgosling/src/: callbacks.rs  context.rs  crypto.rs  error.rs  ffi.rs  lib.rs  macros.rs  object_registry.rs  tor_provider.rs  utils.rs
source/gosling/crates/cgosling/tests/: ffi.rs
source/gosling/crates/gosling/: CMakeLists.txt  Cargo.toml  README.md  cbindgen.toml
source/gosling/crates/gosling-ffi/: CMakeLists.txt  Cargo.toml  Doxyfile.in  build.rs  cbindgen.toml  libgosling.hpp
source/gosling/crates/gosling-ffi/fuzz/: Cargo.toml
source/gosling/crates/gosling-ffi/fuzz/fuzz_targets/: fuzz_gosling_ffi.rs
source/gosling/crates/gosling-ffi/src/: ffi.rs  lib.rs
source/gosling/crates/gosling-ffi/tests/: ffi.rs
source/gosling/crates/gosling/fuzz/: Cargo.toml
source/gosling/crates/gosling/fuzz/fuzz_targets/: arbitrary_types.rs  fuzz_endpoint_client.rs  fuzz_endpoint_server.rs  fuzz_identity_client.rs  fuzz_identity_server.rs  utils.rs
source/gosling/crates/gosling/src/: ascii_string.rs  context.rs  endpoint_client.rs  endpoint_server.rs  error.rs  gosling.rs  honk_rpc.rs  identity_client.rs  identity_server.rs  lib.rs  memory_stream.rs  object_registry.rs  tor_controller.rs  tor_crypto.rs
source/gosling/crates/gosling/tests/: context.rs
source/gosling/crates/honk-rpc/: CMakeLists.txt  Cargo.toml  README.md
source/gosling/crates/honk-rpc/fuzz/: .gitignore  Cargo.toml
source/gosling/crates/honk-rpc/fuzz/fuzz_targets/: fuzz_session.rs
source/gosling/crates/honk-rpc/src/: byte_counter.rs  honk_rpc.rs  lib.rs  memory_stream.rs
source/gosling/crates/honk-rpc/tests/: honk_rpc.rs
source/gosling/crates/tor-interface/: CMakeLists.txt  Cargo.toml  README.md
source/gosling/crates/tor-interface/examples/: legacy-tor-provider-listener.rs  legacy-tor-provider-provider.rs
source/gosling/crates/tor-interface/fuzz/: .gitignore  Cargo.toml
source/gosling/crates/tor-interface/fuzz/fuzz_targets/: fuzz_crypto.rs
source/gosling/crates/tor-interface/src/: arti_client_tor_client.rs  arti_process.rs  arti_tor_client.rs  censorship_circumvention.rs  error.rs  legacy_tor_client.rs  legacy_tor_control_stream.rs  legacy_tor_controller.rs  legacy_tor_process.rs  legacy_tor_version.rs  lib.rs  mock_tor_client.rs  proxy.rs  tor_controller.rs  tor_crypto.rs  tor_manager.rs  tor_process.rs  tor_provider.rs  tor_version.rs
source/gosling/crates/tor-interface/tests/: tor_crypto.rs  tor_provider.rs  tor_utils.rs
source/gosling/source/: gosling.rs
source/gosling/src/: error.rs  ffi.rs  gosling.rs  honk_rpc.rs  lib.rs  object_registry.rs  test_utils.rs  tor_controller.rs  tor_crypto.rs  work_manager.rs
source/pages/: CMakeLists.txt  style.css
source/pages/content/: design-doc.md  gosling-spec.md  honk-rpc-spec.md  index.md  news.md  presentations.md  security-reviews.md  usage-guide.md
source/pages/images/: CMakeLists.txt  client_auth_signature.uml  client_auth_signature_verification.uml
source/pages/pdfs/: CMakeLists.txt
source/pages/templates/: page.mustache
source/test/: CMakeLists.txt
source/test/functional/: CMakeLists.txt  precomp.hpp  test.cpp
source/test/unit/: CMakeLists.txt  precomp.hpp  test.cpp
source/tor_crypto/: CMakeLists.txt  precomp.c  precomp.h  tor_stubs.c
(+1164 files in other folders)
