[package]
name = "gosling"
build = "build.rs"
authors = ["Richard Pospesel <richard@blueprintforfreespeech.net>"]
version = "0.0.1"

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
static_assertions = "1.1.0"
lazy_static = "1.4.0"
num_enum = "0.5.6"
rust-crypto = "^0.2"
zeroize = "1.5.0"
rand = "0.8.4"
data-encoding = "2.3.2"
anyhow = "1.0"
paste = "1.0"
regex = "0.2"


[lib]
name = "gosling"
crate-type = ["staticlib"]
