[package]
name = "gosling"
build = "build.rs"
authors = ["Richard Pospesel <richard@blueprintforfreespeech.net>"]
version = "0.0.1"

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
anyhow = "1.0"
data-encoding = "2.3.2"
lazy_static = "1.4.0"
ntest = "0.7.5"
num_enum = "0.5.6"
paste = "1.0"
rand = "0.8.5"
rand_core = "0.6.3"
regex = "0.2"
rust-crypto = "^0.2"
signature = "1.5.0"
socks = "0.3.4"
static_assertions = "1.1.0"
tor-llcrypto = "0.2.0"
url = "2.2.2"
zeroize = "^1"

[lib]
name = "gosling"
crate-type = ["staticlib"]
